[metadata]
name = traceback2
version = 1.0.0
summary = Backports of the traceback module
description-file =
    README.rst
author = Testing-cabal
author-email = testing-cabal@lists.launchpad.net
home-page = https://github.com/testing-cabal/traceback2
classifier =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development

[files]
packages =
    traceback2

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 0
warnerrors = true
